--- a/pympress/share/xml/presenter.glade
+++ b/pympress/share/xml/presenter.glade
@@ -3,6 +3,11 @@
 <interface>
   <requires lib="gtk+" version="3.2"/>
   <object class="GtkSizeGroup" id="previews_sizegroup"/>
+  <object class="GtkRecentFilter" id="recent_filter">
+    <mime-types>
+      <mime-type>application/pdf</mime-type>
+    </mime-types>
+  </object>
   <object class="GtkAdjustment" id="spin_adjust">
     <property name="lower">1</property>
     <property name="upper">1</property>
@@ -51,6 +56,24 @@
                         <property name="use_stock">True</property>
                         <signal name="activate" handler="pick_file" swapped="no"/>
                         <accelerator key="o" signal="activate"/>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkMenuItem" id="file_recent">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Open _Recent</property>
+                        <property name="use_underline">True</property>
+                        <child type="submenu">
+                          <object class="GtkRecentChooserMenu" id="menu_recent">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="filter">recent_filter</property>
+                            <property name="limit">10</property>
+                            <property name="sort_type">mru</property>
+                            <signal name="item-activated" handler="recent_document" swapped="no"/>
+                          </object>
+                        </child>
                       </object>
                     </child>
                     <child>
