--- a/pympress/share/xml/presenter.glade
+++ b/pympress/share/xml/presenter.glade
@@ -374,8 +374,10 @@
                         <property name="visible">True</property>
                         <property name="app_paintable">True</property>
                         <property name="can_focus">False</property>
-                        <property name="events">GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_STRUCTURE_MASK</property>
-                        <signal name="button-press-event" handler="on_link" swapped="no"/>
+                        <property name="events">GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK</property>
+                        <signal name="button-press-event" handler="track_pointer" swapped="no"/>
+                        <signal name="button-release-event" handler="track_pointer" swapped="no"/>
+                        <signal name="motion-notify-event" handler="track_pointer" swapped="no"/>
                         <signal name="configure-event" handler="on_configure_da" swapped="no"/>
                         <signal name="draw" handler="on_draw" swapped="no"/>
                         <signal name="motion-notify-event" handler="on_link" swapped="no"/>
