--- a/pympress/share/xml/presenter.glade
+++ b/pympress/share/xml/presenter.glade
@@ -20,7 +20,6 @@
     <property name="events">GDK_POINTER_MOTION_MASK | GDK_KEY_PRESS_MASK | GDK_STRUCTURE_MASK | GDK_SCROLL_MASK</property>
     <property name="title" translatable="yes">pympress presenter</property>
     <property name="window_position">center</property>
-    <property name="default_width">1067</property>
     <signal name="configure-event" handler="on_configure_win" swapped="no"/>
     <signal name="delete-event" handler="save_and_quit" swapped="no"/>
     <signal name="destroy" handler="save_and_quit" swapped="no"/>
@@ -422,99 +421,114 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkBox" id="right_pane">
+                  <object class="GtkPaned" id="vpaned">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="margin_left">5</property>
-                    <property name="homogeneous">False</property>
+                    <property name="can_focus">True</property>
                     <property name="orientation">vertical</property>
+                    <property name="position">11</property>
+                    <property name="position_set">True</property>
+                    <property name="wide_handle">True</property>
+                    <signal name="button-release-event" handler="on_pane_event" swapped="no"/>
+                    <signal name="notify::position" handler="on_pane_event" swapped="no"/>
                     <child>
-                      <object class="GtkAspectFrame" id="p_frame_pres">
-                        <property name="height_request">200</property>
-                        <property name="can_focus">False</property>
-                        <property name="label_xalign">0</property>
-                        <property name="shadow_type">in</property>
-                        <property name="yalign">0</property>
-                        <property name="ratio">1.3300000429153442</property>
-                        <property name="obey_child">False</property>
-                        <child>
-                          <object class="GtkDrawingArea" id="p_da_pres">
-                            <property name="name">p_da_pres</property>
-                            <property name="visible">True</property>
-                            <property name="app_paintable">True</property>
-                            <property name="can_focus">False</property>
-                            <signal name="configure-event" handler="on_configure_da" swapped="no"/>
-                            <signal name="draw" handler="on_draw" swapped="no"/>
-                          </object>
-                        </child>
-                        <child type="label">
-                          <object class="GtkLabel" id="label420">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Current slide</property>
-                            <property name="use_markup">True</property>
-                            <style>
-                              <class name="frame-label"/>
-                            </style>
-                          </object>
-                        </child>
-                      </object>
-                      <packing>
-                        <property name="expand">True</property>
-                        <property name="fill">True</property>
-                        <property name="position">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkAspectFrame" id="p_frame_next">
-                        <property name="height_request">200</property>
+                      <object class="GtkBox" id="right_pane">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label_xalign">0</property>
-                        <property name="shadow_type">in</property>
-                        <property name="yalign">0</property>
-                        <property name="ratio">1.3300000429153442</property>
-                        <property name="obey_child">False</property>
+                        <property name="margin_left">5</property>
+                        <property name="orientation">vertical</property>
                         <child>
-                          <object class="GtkDrawingArea" id="p_da_next">
-                            <property name="name">p_da_next</property>
-                            <property name="visible">True</property>
-                            <property name="app_paintable">True</property>
+                          <object class="GtkAspectFrame" id="p_frame_pres">
+                            <property name="height_request">200</property>
                             <property name="can_focus">False</property>
-                            <signal name="configure-event" handler="on_configure_da" swapped="no"/>
-                            <signal name="draw" handler="on_draw" swapped="no"/>
+                            <property name="label_xalign">0</property>
+                            <property name="shadow_type">in</property>
+                            <property name="yalign">0</property>
+                            <property name="ratio">1.3300000429153442</property>
+                            <property name="obey_child">False</property>
+                            <child>
+                              <object class="GtkDrawingArea" id="p_da_pres">
+                                <property name="name">p_da_pres</property>
+                                <property name="visible">True</property>
+                                <property name="app_paintable">True</property>
+                                <property name="can_focus">False</property>
+                                <signal name="configure-event" handler="on_configure_da" swapped="no"/>
+                                <signal name="draw" handler="on_draw" swapped="no"/>
+                              </object>
+                            </child>
+                            <child type="label">
+                              <object class="GtkLabel" id="label420">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="label" translatable="yes">Current slide</property>
+                                <property name="use_markup">True</property>
+                                <style>
+                                  <class name="frame-label"/>
+                                </style>
+                              </object>
+                            </child>
                           </object>
+                          <packing>
+                            <property name="expand">True</property>
+                            <property name="fill">True</property>
+                            <property name="position">0</property>
+                          </packing>
                         </child>
-                        <child type="label">
-                          <object class="GtkLabel" id="label421">
+                        <child>
+                          <object class="GtkAspectFrame" id="p_frame_next">
+                            <property name="height_request">200</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Next slide</property>
-                            <property name="use_markup">True</property>
-                            <style>
-                              <class name="frame-label"/>
-                            </style>
+                            <property name="label_xalign">0</property>
+                            <property name="shadow_type">in</property>
+                            <property name="yalign">0</property>
+                            <property name="ratio">1.3300000429153442</property>
+                            <property name="obey_child">False</property>
+                            <child>
+                              <object class="GtkDrawingArea" id="p_da_next">
+                                <property name="name">p_da_next</property>
+                                <property name="visible">True</property>
+                                <property name="app_paintable">True</property>
+                                <property name="can_focus">False</property>
+                                <signal name="configure-event" handler="on_configure_da" swapped="no"/>
+                                <signal name="draw" handler="on_draw" swapped="no"/>
+                              </object>
+                            </child>
+                            <child type="label">
+                              <object class="GtkLabel" id="label421">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="label" translatable="yes">Next slide</property>
+                                <property name="use_markup">True</property>
+                                <style>
+                                  <class name="frame-label"/>
+                                </style>
+                              </object>
+                            </child>
                           </object>
+                          <packing>
+                            <property name="expand">True</property>
+                            <property name="fill">True</property>
+                            <property name="position">1</property>
+                          </packing>
                         </child>
                       </object>
                       <packing>
-                        <property name="expand">True</property>
-                        <property name="fill">True</property>
-                        <property name="position">1</property>
+                        <property name="resize">True</property>
+                        <property name="shrink">True</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkFrame" id="p_frame_annot">
-                        <property name="height_request">250</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="valign">start</property>
                         <property name="label_xalign">0</property>
                         <property name="shadow_type">in</property>
                         <child>
                           <object class="GtkScrolledWindow" id="scrolled_window">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="min_content_width">10</property>
+                            <property name="min_content_height">10</property>
                             <child>
                               <object class="GtkTreeView" id="scrollable_treelist">
                                 <property name="visible">True</property>
@@ -545,10 +559,8 @@
                         </child>
                       </object>
                       <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
-                        <property name="pack_type">end</property>
-                        <property name="position">2</property>
+                        <property name="resize">True</property>
+                        <property name="shrink">True</property>
                       </packing>
                     </child>
                   </object>
