Separate concerns better in event handling
Get separate handlers for clicks motions of the mouse, and make them
centralize which action-specific handlers are called instead of letting
those call each other.

--- a/pympress/share/xml/highlight.glade
+++ b/pympress/share/xml/highlight.glade
@@ -21,9 +21,9 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK</property>
-                <signal name="button-press-event" handler="track_scribble" swapped="no"/>
-                <signal name="button-release-event" handler="track_scribble" swapped="no"/>
-                <signal name="motion-notify-event" handler="track_scribble" swapped="no"/>
+                <signal name="button-press-event" handler="track_clicks" swapped="no"/>
+                <signal name="button-release-event" handler="track_clicks" swapped="no"/>
+                <signal name="motion-notify-event" handler="track_motions" swapped="no"/>
                 <child>
                   <object class="GtkDrawingArea" id="scribble_p_da">
                     <property name="name">scribble_p_da</property>
