--- a/pympress/share/xml/presenter.glade
+++ b/pympress/share/xml/presenter.glade
@@ -584,7 +584,7 @@
                         <property name="can_focus">False</property>
                         <property name="label_xalign">0</property>
                         <property name="shadow_type">in</property>
-                        <signal name="configure-event" handler="on_configure_annot" swapped="no"/>
+                        <signal name="configure-event" handler="annotations.on_configure_annot" swapped="no"/>
                         <child>
                           <object class="GtkScrolledWindow" id="scrolled_window">
                             <property name="visible">True</property>
